# AMC_sketch_analysis

./: analysis.py  main.py  model.py  pyproject.toml  run_experiment_dups.py  run_experiment_join_size.py  sketch.py  sketch_results.csv
src/: analysis.py  data_generator.py  dups_sketch.py  join_size_sketch.py  model.py  my_types.py  sketch.py
